// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CardTable Body should render card table body properly 1`] = `
.c3 {
  margin: 0;
  color: inherit;
  font-size: 1.4rem;
  font-weight: 400;
  letter-spacing: 0rem;
  line-height: 2.2rem;
  text-align: initial;
  display: inline-block;
}

.c1 {
  padding: 0;
  padding: 1.5rem 2.4rem;
  display: flex;
  flex-direction: row;
  align-items: center;
  justify-content: flex-start;
  overflow: hidden;
}

.c1 .c2 {
  text-overflow: ellipsis;
  overflow: hidden;
  white-space: nowrap;
}

.c0 {
  display: grid;
  grid-template-columns: 1fr 1fr;
  cursor: pointer;
  box-sizing: border-box;
  border-radius: 0.8rem;
  margin-bottom: 0.8rem;
  background-color: white;
  transition: box-shadow 100ms ease-out;
  border: 0.1rem solid #ffffff;
  box-shadow: 0 0.2rem 0.8rem rgba(176,188,200,0.2);
}

.c0:hover {
  box-shadow: 0 0.4rem 0.8rem rgba(176, 188, 200, 0.6);
}

.c0 :nth-child(odd) {
  background: #ffffff;
}

.c0 :nth-child(even) {
  background: #ffffff;
}

<div>
  <table>
    <tbody>
      <tr
        class="c0"
        gridtemplatecolumns="1fr 1fr "
      >
        <td
          align="left"
          class="c1"
        >
          <span
            class="c2 c3"
            textalign="initial"
            textcolor="inherit"
            title="Oli Bob"
          >
            Oli Bob
          </span>
        </td>
        <td
          align="left"
          class="c1"
        >
          <span
            class="c2 c3"
            textalign="initial"
            textcolor="inherit"
            title="Metaformin"
          >
            Metaformin
          </span>
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`CardTable Body should render no result row when there is no data 1`] = `
.c2 {
  margin: 0;
  color: inherit;
  font-size: 1.4rem;
  font-weight: 700;
  letter-spacing: 0rem;
  line-height: 2.2rem;
  text-align: initial;
  display: inline-block;
}

.c0 {
  display: grid;
  grid-template-columns: 1fr 1fr;
  cursor: inherit;
  box-sizing: border-box;
  border-radius: 0.8rem;
  margin-bottom: 0.8rem;
  background-color: white;
  transition: box-shadow 100ms ease-out;
  border: 0.1rem solid #ffffff;
  box-shadow: 0 0.2rem 0.8rem rgba(176,188,200,0.2);
}

.c0:hover {
  box-shadow: 0 0.4rem 0.8rem rgba(176, 188, 200, 0.6);
}

.c0 :nth-child(odd) {
  background: #ffffff;
}

.c0 :nth-child(even) {
  background: #ffffff;
}

.c1 {
  display: flex;
  justify-content: center;
  align-items: center;
  padding: 1.5rem 0;
}

<div>
  <tr
    class="c0 c1"
    gridtemplatecolumns="1fr 1fr "
  >
    <strong
      class="c2"
      textalign="initial"
      textcolor="inherit"
      textvariant="body2"
      textweight="Strong"
    >
      No Result
    </strong>
  </tr>
</div>
`;
